	(defpackage "FOO" (:use "GRAY"))
   or shadow import the symbols associated to generic versions in the packages
   where methods on these functions are defined.

* CLOS:

 - When caching generic function calls, ECL now uses a thread-local hash table
   instead of one hash table per generic function.

* Bugs fixed:

 - ASDF:MAKE-BUILD now handles better the case of a monolithic FASL that
   has to include a number of other subsystems.

 - The bignums produced by RANDOM did not have enough random bits.

 - ECL formerly accepted spaces between the comma and the @ and . characters
   in expressions like ,@ or ,.

 - Building a statically linked ECL works again.

 - Equal random states now compare properly under EQUALP and their hash keys
   are also equal.

 - Problems in the use of "volatile" keywords prevented ECL from compiling
   with a C++ compiler.

 - The reader function for #\ was not suitable for being invoked by the
   user on an arbitrary stream.

 - ECL tried to use intel-64bits assembler on 64 bits processors, even when
   compiler and the operating system work with 32bits.

 - The compiler now inlines and optimizes (FUNCALL (X ..) ... ) where X is a
   macro that returns a lambda form.

 - ECL no longer needs library definition files ecl.def and ecl-threads.def
   thanks to a more clever use of declarations __declspec(dllexport) and
   __declspec(dllimport).

 - We no longer use the flag --rpath when building ECL. Given the fact that
   ECL now assumes a standard Unix filesystem structure, this should pose no
   problem. For nonstandard locations, you will have to define LD_LIBRARY_PATH

* System design:

 - We introduce a new kind of lisp objects, the stack frames. These are objects
   with dynamical extent, which work as adjustable arrays and are mainly used
   for collecting the arguments of a function, in MAP, MAPCAR, APPLY, FUNCALL,
   MULTIPLE-VALUE-CALL, etc.

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***